--- a/app/src/css/app.css
+++ b/app/src/css/app.css
@@ -77,6 +77,11 @@ body {
 .app-container {
   position: relative;
   overflow: hidden;
+  padding: 20px 0 0 0;
+}
+.app-container .app-header {
+  text-align: center;
+  padding-bottom: 30px;
 }
 .app-container .app-header .app-site-info {
   color: #FFFFFF;
@@ -94,6 +99,11 @@ body {
   font-weight: 300;
   color: white;
 }
+@media (max-width: 768px) {
+  .app-container .app-header .app-site-info .site-title {
+    display: none;
+  }
+}
 .app-container .app-header .app-site-info .site-slogan {
   margin-top: 5px;
   padding: 0;
@@ -101,9 +111,16 @@ body {
   font-weight: 300;
   color: white;
 }
+@media (max-width: 768px) {
+  .app-container .app-header .app-site-info .site-slogan {
+    display: none;
+  }
+}
 @media (min-width: 992px) {
   .app-container .app-header {
     float: left;
+    padding-top: 100px;
+    text-align: left;
   }
   .app-container .app-content {
     float: right;
@@ -187,10 +204,45 @@ body {
   font-weight: 800;
   color: #1b65f6;
   border: 1px solid #1b65f6;
+  background: #FFFFFF;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  padding: 7px 15px;
+  padding: 10px 15px;
+  text-transform: uppercase;
+}
+.app-form-actions .app-button.primary {
+  background: #1b65f6;
+  color: #FFFFFF;
+}
+
+.app-files-selected {
+  max-height: 150px;
+  position: relative;
+  overflow-y: auto;
+  background: #FFFFFF;
+  position: relative;
+  margin: -20px -20px 20px -20px;
+  padding: 20px;
+}
+.app-files-selected .app-files-selected-item {
+  display: flex;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.09);
+  padding: 10px 0;
+}
+.app-files-selected .app-files-selected-item .filename {
+  flex-grow: 1;
+}
+.app-files-selected .app-file-remove {
+  border: 0 none;
+  padding: 3px;
+  font-size: 14px;
+  font-weight: 300;
+  background: none;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=app.css.map */
