--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -27,9 +27,10 @@ body{
 .app-container {
     position: relative;
     overflow: hidden;
-
+    padding: 20px 0 0 0;
     .app-header{
-
+        text-align: center;
+        padding-bottom: 30px;
         .app-site-info{
             color: #FFFFFF;
             h1{
@@ -44,8 +45,14 @@ body{
                 font-size: 50px;
                 font-weight: 300;
                 color: rgba(255, 255, 255, 9);
+                @media (max-width: $screen-sm){
+                    display: none;
+                }
             }
             .site-slogan{
+                @media (max-width: $screen-sm){
+                    display: none;
+                }
                 margin-top: 5px;
                 padding: 0;
                 font-size: 30px;
@@ -61,6 +68,8 @@ body{
     @media (min-width: $screen-md){
     .app-header{
         float: left;
+        padding-top: 100px;
+        text-align: left;
     }
     .app-content{
         float: right;
@@ -149,9 +158,51 @@ body{
         font-weight: 800;
         color: $primary-color;
         border: 1px solid $primary-color;
+        background: #FFFFFF;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         border-radius: 5px;
-        padding: 7px 15px;
+        padding: 10px 15px;
+        text-transform: uppercase;
+        &.primary{
+            background: $primary-color;
+            color: #FFFFFF;
+        }
     }
+}
+
+.app-files-selected{
+    max-height: 150px;
+    position: relative;
+    overflow-y: auto;
+    background: #FFFFFF;
+    position: relative;
+    margin: -20px -20px 20px -20px;
+    padding: 20px;
+
+    .app-files-selected-item{
+        display: flex;
+        border-bottom: 1px solid rgba(0,0,0,0.09);
+        padding: 10px 0;
+
+        .filename{
+            flex-grow: 1;
+        }
+
+        .file-action{
+
+        }
+    }
+
+    .app-file-remove{
+        border: 0 none;
+        padding: 3px;
+        font-size: 14px;
+        font-weight: 300;
+        background: none;
+    }
+}
+
+.text-uppercase{
+    text-transform: uppercase;
 }
