--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -125,6 +125,11 @@ body{
         height: 35px;
         border: 1px dashed $body-text-color;
     }
+    &.error{
+        .app-upload-icon{
+            border-color: $danger-color;
+        }
+    }
 }
 
 .app-form-item{
@@ -147,6 +152,12 @@ body{
 
     textare{
         min-height: 50px;
+    }
+
+    &.error{
+        input{
+            color: $danger-color;
+        }
     }
 }
 
@@ -205,4 +216,8 @@ body{
 
 .text-uppercase{
     text-transform: uppercase;
+}
+
+.error{
+    color: $danger-color;
 }
