--- a/app/src/css/app.css
+++ b/app/src/css/app.css
@@ -174,6 +174,9 @@ body {
   height: 35px;
   border: 1px dashed #96a3bb;
 }
+.app-file-select-zone.error .app-upload-icon {
+  border-color: #d0152e;
+}
 
 .app-form-item {
   margin: 0 0 15px 0;
@@ -195,6 +198,9 @@ body {
 }
 .app-form-item textare {
   min-height: 50px;
+}
+.app-form-item.error input {
+  color: #d0152e;
 }
 
 .app-form-actions .app-button {
@@ -243,6 +249,10 @@ body {
 
 .text-uppercase {
   text-transform: uppercase;
+}
+
+.error {
+  color: #d0152e;
 }
 
 /*# sourceMappingURL=app.css.map */
