--- a/app/src/css/app.css
+++ b/app/src/css/app.css
@@ -53,6 +53,67 @@ table {
   border-spacing: 0;
 }
 
+@font-face {
+  font-family: "fileapp";
+  src: url("fonts/fileapp.eot");
+  src: url("fonts/fileapp.eot?#iefix") format("embedded-opentype"), url("fonts/fileapp.woff") format("woff"), url("fonts/fileapp.ttf") format("truetype"), url("fonts/fileapp.svg#fileapp") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+[data-icon]:before {
+  font-family: "fileapp" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^=icon-]:before,
+[class*=" icon-"]:before {
+  font-family: "fileapp" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-paper-plane:before {
+  content: "a";
+}
+
+.icon-mouse-pointer:before {
+  content: "c";
+}
+
+.icon-upload-cloud:before {
+  content: "b";
+}
+
+.icon-download:before {
+  content: "d";
+}
+
+.icon-upload:before {
+  content: "e";
+}
+
+.icon-picture-streamline:before {
+  content: "g";
+}
+
+.icon-paperplane:before {
+  content: "f";
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   background: #1b65f6;
@@ -144,10 +205,13 @@ body {
   background: #f3f7ff;
 }
 .app-card .app-card-header .app-card-header-inner {
-  padding: 20px;
+  padding: 10px 20px;
 }
 .app-card .app-card-content .app-card-content-inner {
   padding: 20px;
+}
+.app-card.app-card-uploading .app-card-content .app-card-content-inner, .app-card.app-card-upload-sent .app-card-content .app-card-content-inner {
+  padding: 40px;
 }
 
 .app-file-select-zone {
@@ -170,9 +234,17 @@ body {
 .app-file-select-zone .app-upload-icon {
   display: inline-block;
   margin-bottom: 10px;
-  width: 70px;
-  height: 35px;
+  width: 60px;
+  height: 30px;
   border: 1px dashed #96a3bb;
+  position: relative;
+}
+.app-file-select-zone .app-upload-icon i {
+  position: absolute;
+  left: 10px;
+  top: -10px;
+  background: #F3F7FF;
+  font-size: 28px;
 }
 .app-file-select-zone.error .app-upload-icon {
   border-color: #d0152e;
@@ -192,6 +264,9 @@ body {
   border: 1px solid #e0e0e0;
   outline: 0 none;
   padding: 8px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 }
 .app-form-item input[type=text]:focus, .app-form-item input[type=text] :active, .app-form-item textarea:focus, .app-form-item textarea :active {
   outline: 0 none;
@@ -253,6 +328,96 @@ body {
 
 .error {
   color: #d0152e;
+}
+
+.app-home-uploading-icon {
+  display: block;
+  text-align: center;
+}
+.app-home-uploading-icon i {
+  font-size: 60px;
+  display: inline-block;
+  border: 1px solid #96a3bb;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  line-height: 100px;
+}
+.app-home-uploading-icon h2 {
+  margin: 20px 0 0 0;
+  padding: 0;
+  font-size: 17px;
+}
+
+.app-home-upload-sent-icon {
+  display: block;
+  text-align: center;
+}
+.app-home-upload-sent-icon i {
+  font-size: 50px;
+  display: inline-block;
+  border: 1px solid #96a3bb;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  line-height: 100px;
+}
+
+.app-upload-stats {
+  display: flex;
+  flex-direction: row;
+}
+.app-upload-stats .app-upload-stats-left {
+  flex-grow: 1;
+}
+.app-upload-files-total {
+  margin-top: 20px;
+}
+
+.app-progress {
+  background: #f1f8fe;
+  border: 1px solid #031929;
+  height: 15px;
+  line-height: 15px;
+  width: 100%;
+  border-radius: 10px;
+  margin: 10px 0 10px 0;
+  position: relative;
+  overflow: hidden;
+}
+.app-progress .app-progress-bar {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  height: 15px;
+  line-height: 15px;
+  background: #1b65f6;
+}
+
+.app-upload-cancel-button {
+  margin-top: 50px;
+}
+
+.app-text-center {
+  text-align: center;
+}
+
+.app-upload-sent-message h2 {
+  font-size: 25px;
+  font-weight: 400;
+  padding: 0;
+  margin: 20px 0;
+}
+.app-upload-sent-message p {
+  line-height: 1.5em;
+}
+
+.app-upload-sent-actions {
+  margin: 20px 0;
+}
+.app-upload-sent-actions button {
+  margin: 10px 0;
 }
 
 /*# sourceMappingURL=app.css.map */
