--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -1,6 +1,7 @@
 @import "https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap";
 @import "reset";
 @import "variable";
+@import "_font";
 
 
 body{
@@ -77,28 +78,35 @@ body{
 }
 
 }
-.app-card{
+.app-card {
     overflow: hidden;
     position: relative;
     background: #FFFFFF;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    @media (min-width: $screen-sm){
-        width: 350px;
+    @media (min-width: $screen-sm) {
+      width: 350px;
     }
-    .app-card-header{
-        background: rgba(243, 247, 255, 1);
-        .app-card-header-inner{
-            padding: 20px;
+    .app-card-header {
+      background: rgba(243, 247, 255, 1);
+      .app-card-header-inner {
+        padding: 10px 20px;
+      }
+    }
+    .app-card-content {
+      .app-card-content-inner {
+        padding: 20px;
+      }
+    }
+    &.app-card-uploading, &.app-card-upload-sent {
+      .app-card-content {
+        .app-card-content-inner {
+          padding: 40px;
         }
+      }
     }
-    .app-card-content{
-        .app-card-content-inner{
-            padding: 20px;
-        }
-    }
-}
+  }
 
 .app-file-select-zone{
     width: 100%;
@@ -121,9 +129,17 @@ body{
     .app-upload-icon{
         display: inline-block;
         margin-bottom: 10px;
-        width: 70px;
-        height: 35px;
+        width: 60px;
+        height: 30px;
         border: 1px dashed $body-text-color;
+        position: relative;
+        i{
+            position: absolute;
+            left: 10px;
+            top: -10px;
+            background: #F3F7FF;
+            font-size: 28px;
+        }
     }
     &.error{
         .app-upload-icon{
@@ -132,6 +148,7 @@ body{
     }
 }
 
+//form
 .app-form-item{
     margin: 0 0 15px 0;
     label{
@@ -140,11 +157,15 @@ body{
         font-weight: 400;
         margin: 0 0 8px 0;
     }
+    //input form 
     input[type='text'],textarea{
         width: 100%;
         border: 1px solid rgba(224, 224, 224, 1);
         outline: 0 none;
         padding: 8px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
         &:focus, :active{
             outline: 0 none;
         }
@@ -221,3 +242,105 @@ body{
 .error{
     color: $danger-color;
 }
+
+.app-home-uploading-icon {
+    display: block;
+    text-align: center;
+    i {
+      font-size: 60px;
+      display: inline-block;
+      border: 1px solid $body-text-color;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      line-height: 100px;
+    }
+    
+  h2 {
+    margin: 20px 0 0 0;
+    padding: 0;
+    font-size: 17px;
+  }
+}
+
+.app-home-upload-sent-icon {
+    display: block;
+    text-align: center; 
+    i {
+      font-size: 50px;
+      display: inline-block;
+      border: 1px solid $body-text-color;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      line-height: 100px;
+    } 
+  }
+
+.app-upload-stats {
+    display: flex;
+    flex-direction: row;
+    .app-upload-stats-left {
+      flex-grow: 1;
+    }
+    .app-upload-stats-right {
+    }
+  }
+
+
+  .app-upload-files-total {
+    margin-top: 20px;
+  }
+
+  
+.app-progress {
+
+    background: rgba(241, 248, 254, 1);
+    border: 1px solid rgb(3, 25, 41);
+    height: 15px;
+    line-height: 15px;
+    width: 100%;
+    border-radius: 10px;
+    margin: 10px 0 10px 0;
+    position: relative;
+    overflow: hidden;
+    .app-progress-bar {
+      display: block;
+      position: absolute;
+      left: 0; 
+      top: 0px;
+      height: 15px;
+      line-height: 15px;
+      background: $primary-color;
+    }
+  
+  }
+
+  .app-upload-cancel-button {
+    margin-top: 50px;
+  }
+
+  
+.app-text-center {
+    text-align: center;
+  }
+
+  .app-upload-sent-message {
+    h2 { 
+      font-size: 25px; 
+      font-weight: 400; 
+      padding: 0; 
+      margin: 20px 0;
+    }
+    p {
+      line-height: 1.5em; 
+    }
+  }
+
+  
+.app-upload-sent-actions {
+    margin: 20px 0;
+    button {
+      margin: 10px 0;
+    }
+  }
